--- a/haproxy.cfg.jinja
+++ b/haproxy.cfg.jinja
@@ -1,4 +1,4 @@
-#location of file in /srv/salt/haproxy/
+#location of file in /srv/salt/haproxy/templates/
 global
     log /dev/log local0
     log /dev/log local1 notice
